The Save thing has been fix, only thing to do is the make an Icon and Needed the Actvity and Lesson Panel